--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Banger and Co. - Rent a Vehicle Now</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/app_logo.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
